--- a/CrudCharts/CrudCharts/Views/Home/Index.cshtml
+++ b/CrudCharts/CrudCharts/Views/Home/Index.cshtml
@@ -5,65 +5,8 @@
 <script src="~/Chart.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 
-<canvas id="myChart"></canvas>
 
-<script>
-
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var chart = new Chart(ctx, {
-        // The type of chart we want to create
-        type: 'line',
-
-        // The data for our dataset
-        data: {
-            labels: ["January", "February", "March", "April", "May", "June", "July"],
-            datasets: [{
-                label: "My First dataset",
-                backgroundColor: 'rgb(255, 99, 132)',
-                borderColor: 'rgb(255, 99, 132)',
-                data: [0, 10, 5, 2, 20, 30, 45],
-            }]
-        },
-
-        // Configuration options go here
-        options: {}
-    });
-
-    $(function () {
-        $.ajax({
-            dataType: "json",
-            type: "GET",
-            url: "api/DashBoard",
-            success: function (dados) {
-                $(dados).each(function (i) {
-                    document.appendChild("<p>dados retornados do javascript " + dados[i] + "</p>")
-                });
-            }
-        });
-    });
-</script>
-
-<h1>@ViewData["Message"]</h1>
-
-
-<p>Hello, world! The time on the server is @DateTime.Now</p>
-
-@{
-    var quote = "The future depends on what you do today. - Mahatma Gandhi";
-}
-
-<p>@quote</p>
-
-@{
-    quote = "Hate cannot drive out hate, only love can do that. - Martin Luther King, Jr.";
-}
-
-<p>@quote</p>
-
-@for (var i = 0; i < Model.Length; i++)
-{
-    <p>mes: @Model[i]</p>
-}
+<h1>Bem vindo</h1>
 
 <!--http://www.macoratti.net/17/11/mvc_chartjs1.htm-->
 <h2>Gráfico com Chart.js</h2>
@@ -91,7 +34,7 @@
                 var dataT = {
                     labels: aLabels,
                     datasets: [{
-                        label: "Veículos",
+                        label: "Quantidade vendida",
                         data: aDatasets1,
                         fill: false,
                         backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)",
@@ -108,7 +51,7 @@
                     data: dataT,
                     options: {
                         responsive: true,
-                        title: { display: true, text: 'Vendas de Veículos - 2017 (milhares)' },
+                        title: { display: true, text: 'Top 10 produtos mais vendidos desde que a empresa nasceu' },
                         legend: { position: 'bottom' },
                         scales: {
                             xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
