--- a/CrudCharts/CrudCharts/Views/Home/Index.cshtml
+++ b/CrudCharts/CrudCharts/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 
 
-<h1>Bem vindo</h1>
+<h1>Bem vindo ao DashBoard de processos decisórios</h1>
 
 <!--http://www.macoratti.net/17/11/mvc_chartjs1.htm-->
 <h2>Gráfico com Chart.js</h2>
@@ -15,11 +15,14 @@
 {
     <div Style="font-family: Corbel; font-size: small ;text-align:center " class="row">
         <div>
+            <h2>Sujestão de vendas deste mês</h2>
             <h3 id="Aguarde">Aguarde carregando dados para o gráfico...</h3>
             <div style="width:100%;height:100%">
                 <canvas id="mChart1" style="padding: 0;margin: auto;display: block; "> </canvas>
             </div>
             <div style="width:100%;height:100%">
+                <h2>Sujestão de promoções para este mês</h2>
+                <h3 id="Aguarde2">Aguarde carregando dados para o gráfico...</h3>
                 <canvas id="mChart2" style="padding: 0;margin: auto;display: block; "> </canvas>
             </div>
         </div>
@@ -56,7 +59,51 @@
                     data: TotalQuantidade,
                     options: {
                         responsive: true,
-                        title: { display: true, text: 'Previsao de venda desse mes baseando-se nas vendas do ano passado' },
+                        title: { display: true, text: 'Previsao de venda desse mes baseando-se nas vendas dos ultimos 3 anos' },
+                        legend: { position: 'bottom' },
+                        scales: {
+                            xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
+                            yAxes: [{
+                                gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' },
+                                ticks: { stepSize: 50, beginAtZero: true }
+                            }]
+                        },
+                    }
+                });
+            }
+        });
+
+        $.ajax({
+            type: "POST",
+            url: "/Home/GruposMenosVendidos",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (mems) {
+                var aData = mems;
+                var aLabels = aData[0];
+                var aDataQuantidade = aData[1];
+                var TotalQuantidade = {
+                    labels: aLabels,
+                    datasets: [{
+                        label: "Quantidade vendida",
+                        data: aDataQuantidade,
+                        fill: false,
+                        backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)",
+                            "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
+                        borderColor: ["rgb(54, 162, 235)", "rgb(255, 99, 132)", "rgb(255, 159, 64)", "rgb(255, 205, 86)",
+                            "rgb(75, 192, 192)", "rgb(153, 102, 255)", "rgb(201, 203, 207)"],
+                        borderWidth: 5
+                    }]
+                };
+
+                var ctx = document.getElementById('mChart2').getContext('2d');
+                document.getElementById('Aguarde2').hidden = true;
+                var myNewChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: TotalQuantidade,
+                    options: {
+                        responsive: true,
+                        title: { display: true, text: 'Grupos menos vendidos neste mes baseado nos ultimos 3 anos' },
                         legend: { position: 'bottom' },
                         scales: {
                             xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
