--- a/CrudCharts/CrudCharts/Views/Home/Index.cshtml
+++ b/CrudCharts/CrudCharts/Views/Home/Index.cshtml
@@ -25,6 +25,11 @@
                 <h3 id="Aguarde2">Aguarde carregando dados para o gráfico...</h3>
                 <canvas id="mChart2" style="padding: 0;margin: auto;display: block; "> </canvas>
             </div>
+            <div style="width:100%;height:100%">
+                <h2>Produtos com maior crescimento de venda</h2>
+                <h3 id="Aguarde3">Aguarde carregando dados para o gráfico...</h3>
+                <canvas id="mChart3" style="padding: 0;margin: auto;display: block; "> </canvas>
+            </div>
         </div>
     </div>
 
@@ -119,7 +124,7 @@
 
         $.ajax({
             type: "POST",
-            url: "/Home/GruposMenosVendidos",
+            url: "/Home/CrescimentoDeVendas",
             contentType: "application/json; charset=utf-8",
             dataType: "json",
             success: function (mems) {
@@ -129,7 +134,7 @@
                 var TotalQuantidade = {
                     labels: aLabels,
                     datasets: [{
-                        label: "Quantidade vendida",
+                        label: "Percentual de crescimento",
                         data: aDataQuantidade,
                         fill: false,
                         backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)",
@@ -140,14 +145,14 @@
                     }]
                 };
 
-                var ctx = document.getElementById('mChart2').getContext('2d');
-                document.getElementById('Aguarde2').hidden = true;
+                var ctx = document.getElementById('mChart3').getContext('2d');
+                document.getElementById('Aguarde3').hidden = true;
                 var myNewChart = new Chart(ctx, {
                     type: 'bar',
                     data: TotalQuantidade,
                     options: {
                         responsive: true,
-                        title: { display: true, text: 'Grupos menos vendidos neste mes baseado nos ultimos 3 anos' },
+                        title: { display: true, text: 'Produtos com maior crescimento em vendas por periodo' },
                         legend: { position: 'bottom' },
                         scales: {
                             xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
